# stm32f4_freertos_driver

./: CMakeLists.txt  LICENSE  STM32F446.svd  STM32F446RETX_FLASH.ld  gcc-arm-none-eabi.cmake  main.cc
core/Startup/: startup_stm32f446retx.c  startup_stm32f446retx.s
driver/bme680/: bme68x.h
driver/gpio/: gpio.c  gpio.h
driver/inc/: gpio.h  i2c.h  imu6050.h  rcc.h  timer.h  uart.h
driver/rcc/: rcc.c  rcc.h
driver/src/: gpio.c  i2c.c  imu6050.c  rcc.c  uart.c
driver/timer/: timer.c
driver/uart/: uart.c  uart.h
examples/: bme680_test.c  task_example.c
inc/: FreeRTOSConfig.h
src/: main.c  system_stm32f4xx.c
